--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Russo One", sans-serif;
+  font-family: "freewill", "Russo One", sans-serif;
   overflow-x: hidden;
   font-size: 18rem;
 }
@@ -168,14 +168,24 @@ header {
   font-size: 19rem;
   text-transform: uppercase;
   letter-spacing: 1.1px;
-  border-bottom: 2px solid transparent;
-
+  border-bottom: 4px solid transparent;
   transition: all 0.1s;
 }
 
-.tituloh:hover {
-  padding-bottom: 2rem;
+.princi:link,
+.princi:visited {
+  color: #fff;
+  text-decoration: none;
+  font-size: 19rem;
+  text-transform: uppercase;
+  letter-spacing: 1.1px;
+  transition: all 0.1s;
 }
+.tituloh:hover .princi,
+.tituloh:active .princi {
+  color: #fff;
+}
+
 .grad:not(.openm) .tituloh:hover .flexopenmenu {
   color: #fff;
   border-bottom: 4px solid #fff;
@@ -281,6 +291,12 @@ header {
   transition: all 0.3s;
   border: 2px solid transparent;
 }
+.btn a {
+  display: flex;
+}
+.btnap {
+  margin-left: 20rem;
+}
 .btn:hover {
   background-color: #2c2c2c;
   border: 2px solid #fff;
@@ -289,7 +305,6 @@ a .iconeentrar {
   --ionicon-stroke-width: 55rem;
   align-self: center;
   width: 20rem;
-  margin-right: 20rem;
 }
 .icone {
   cursor: pointer;
@@ -313,7 +328,7 @@ a .iconeentrar {
 
 .searchbar {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   width: 100%;
   display: block;
   height: 0;
@@ -380,6 +395,7 @@ a .iconeentrar {
   height: 37rem;
   transition: none;
   transition: all 0.2s;
+  z-index: 2;
 }
 
 .search .icone {
@@ -894,18 +910,18 @@ BANNER
 .timestab img {
   align-self: center;
 }
-.tabela table thead tr th:not(:nth-child(2)) {
+.tabela th:not(:nth-child(2)) {
   width: 48rem;
   text-align: center;
   font-size: 16rem;
 }
-.tabela table thead tr th:nth-child(2) {
+.tabela th:nth-child(2) {
   text-align: justify;
   font-size: 18rem;
   margin-left: -45rem;
   position: absolute;
 }
-.tabela table tbody tr:nth-child(1) {
+.tabela tr:nth-child(1) {
   text-align: center;
 }
 
@@ -963,7 +979,7 @@ tbody:before {
 .tche .lojatitulo h2,
 .adry .lojatitulo h2 {
   color: #fff;
-  background-color: #222222de;
+  background-color: #222222;
   padding-left: 12rem;
 }
 .edu .lojatitulo h2 {
@@ -997,9 +1013,12 @@ tbody:before {
   display: flex;
   flex-direction: column;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all 0.7s ease-out;
   position: relative;
   overflow: hidden;
+}
+.imgloja {
+  transition: none;
 }
 
 .flexloja:nth-child(1) .imgloja {
@@ -1011,17 +1030,7 @@ tbody:before {
 .flexloja:nth-child(3) .imgloja {
   background-image: url(../img/loja/edu.jpg);
 }
-.flexloja::after {
-  transition: all 0.3s;
 
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-.flexloja:hover::after {
-  box-shadow: inset 0 0 0 4px #000;
-}
 .flexloja:hover {
   box-shadow: 0 0 25px 0 #000;
 }
@@ -1053,6 +1062,7 @@ tbody:before {
   letter-spacing: 5px;
   transition: all 0.3s;
   z-index: 3;
+  user-select: none;
 }
 
 /* ////////////////////////////////////////// */
@@ -1066,7 +1076,6 @@ tbody:before {
 }
 .tv {
   margin: 0 auto;
-  height: 1000rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1105,20 +1114,29 @@ tbody:before {
   color: #fff;
   background-color: #000;
 }
+
 .embedtv {
+  /* width: 100%;
+  height: auto; */
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
   width: 100%;
-  height: auto;
 }
 .embedtv iframe {
+  /* width: 100%;
+  height: 520rem; */
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 520rem;
+  height: 100%;
 }
 .outrosvid {
   margin-top: 36rem;
-  width: calc(100% + 1px);
-  height: 160rem;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 5%;
 }
 .video {
   opacity: 0.9;
@@ -1126,10 +1144,15 @@ tbody:before {
   overflow: hidden;
   cursor: pointer;
   transition: all 0.1s;
+  display: flex; /* Adiciona display flex */
+  align-items: center; /* Centraliza verticalmente */
+  justify-content: center; /* Centraliza horizontalmente */
 }
+
 .videoimg {
   opacity: 0.9;
-  height: 160rem;
+  width: 100%;
+  height: 100%; /* Ocupa todo o espaço disponível */
   transition: all 0.3s;
 }
 
@@ -1149,12 +1172,11 @@ tbody:before {
 }
 .video.active img {
   opacity: 1;
-  height: 160rem;
 }
 .video:hover img {
   opacity: 1;
-  height: 160rem;
 }
+
 iframe {
   border: 2px solid #fff;
 }
@@ -1218,7 +1240,7 @@ iframe {
   transform: scale(1.1);
 }
 .seppat {
-  width: 750rem;
+  width: 80%;
   height: 1px;
   margin: 8rem auto;
 
